ajout affichage formulaire ajout user

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </header>
     <section id="bloc_form">
         <h3>Saisir les identifiants</h3>
-        <form id="form" action="http://localhost:8090/api/signin" method="post">
+        <form id="form">
             <div class="champ_form" id="champ_username">
                 <label for="username">Username</label>
                 <input class="input" type="text" id="user_name" name="username">
