--- a/html/menu_admin.html
+++ b/html/menu_admin.html
@@ -20,6 +20,7 @@
         <div id="bloc_user_info"></div>
         <div class="button" onclick="requestAndDisplayListAllUsers()"><p id="p_button_1">Afficher la Liste des Users</p></div>
         <div id="result"></div>
+        <div id="bloc_user_edit"></div>
         <div class="button" onclick="displayAddUsers()"><p id="p_button_2">Ajouter un user</p></div>
         <div id="bloc_user_add"></div>
     </section>
