ajout page animal pour les admin

--- a/html/menu_admin_user.html
+++ b/html/menu_admin_user.html
@@ -6,14 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/menu_admin.css">
     <script type="text/javascript" src="../js/menu_admin.js"></script>
-    <title>Menu Admin</title>
+    <title>Menu Admin section User</title>
 </head>
 <body onload="init()">
     <header id="header">
-        <h2>Menu Admin</h2>
-        <nav id="nav">
-            <span>User</span>
-            <a class="link_nav" href="menu_admin_animal.html">Animal</a>
+        <h2>Menu <span class="orange_2_text">Admin</span> section <span class="orange_2_text">User</span></h2>
+        <nav id="nav" class="button">
+            <a class="link_nav" href="menu_admin_animal.html">Aller à la section Animal</a>
         </nav>
     </header>
 
