--- a/html/menu_admin_animal.html
+++ b/html/menu_admin_animal.html
@@ -18,6 +18,10 @@
     <section id="bloc_info">
         <h3 id ="h3_username">username : <span id="span_username"></span></h3>
         <h4 id ="h3_token">token : <p id="p_token"></p></h4>
+        <div class="button" onclick="requestAndDisplayAnimalList()"><p id="p_button_0">Afficher la liste des animaux</p></div>
+        <div id="bloc_animal_list"></div>
+        <div class="button" onclick="displayAddAnimal()"><p id="p_button_1">Ajouter un animal</p></div>
+        <div id="bloc_animal_add"></div>
     </section>
 </body>
 </html>
