--- a/html/menu_admin_user.html
+++ b/html/menu_admin_user.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/menu_admin.css">
-    <script type="text/javascript" src="../js/menu_admin.js"></script>
+    <script type="text/javascript" src="../js/menu_admin_user.js"></script>
     <title>Menu Admin section User</title>
 </head>
 <body onload="init()">
