ajout affichage edit animal

--- a/html/menu_admin_animal.html
+++ b/html/menu_admin_animal.html
@@ -20,6 +20,7 @@
         <h4 id ="h3_token">token : <p id="p_token"></p></h4>
         <div class="button" onclick="requestAndDisplayAnimalList()"><p id="p_button_0">Afficher la liste des animaux</p></div>
         <div id="bloc_animal_list"></div>
+        <div id="bloc_animal_edit"></div>
         <div class="button" onclick="displayAddAnimal()"><p id="p_button_1">Ajouter un animal</p></div>
         <div id="bloc_animal_add"></div>
     </section>
